<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/Text_app_mode"
        android:id="@+id/textViewChooseMode"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        android:focusableInTouchMode="false"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_margin="5dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_rfid_reader"
        android:id="@+id/buttonReaderMode"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:textSize="50dp"
        android:enabled="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Text_history"
        android:id="@+id/buttonHistoryMode"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:textSize="50dp"
        android:enabled="true" />
</LinearLayout>